--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
    <title></title>
   </head>
   <body style="background-color:#00FF00">
-   <h1 style="padding-top:20%; padding-bottom:20%; text-align:center;">Abonnements et Facturation</h1>
+   <h1 style="padding-top:20%; padding-bottom:20%; text-align:center;color:#FFFFFF">Abonnements et Facturation</h1>
   </body>
 </html>
