modification de la couleur de fond

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <title></title>
   </head>
-  <body style="background-color:#00FF00">
+  <body style="background-color:#2ecc71">
    <h1 style="padding-top:20%; padding-bottom:20%; text-align:center;color:#FFFFFF">Abonnements et Facturation</h1>
   </body>
 </html>
