Tableau de facturation.htm

--- a/Tableau de facturation_fichiers/sheet001.htm
+++ b/Tableau de facturation_fichiers/sheet001.htm
@@ -4,6 +4,7 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
+<body style="background-color:#2ecc71">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
@@ -44,14 +45,14 @@ else
 
 <body link="#0563C1" vlink="#954F72">
 
-<table border=0 cellpadding=0 cellspacing=0 width=923 style='border-collapse:
- collapse;table-layout:fixed;width:693pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=956 style='border-collapse:
+ collapse;table-layout:fixed;width:718pt'>
  <col width=168 style='mso-width-source:userset;mso-width-alt:6144;width:126pt'>
  <col width=151 style='mso-width-source:userset;mso-width-alt:5522;width:113pt'>
  <col width=124 style='mso-width-source:userset;mso-width-alt:4534;width:93pt'>
  <col width=318 style='mso-width-source:userset;mso-width-alt:11629;width:239pt'>
- <col width=81 span=2 style='mso-width-source:userset;mso-width-alt:2962;
- width:61pt'>
+ <col width=114 style='mso-width-source:userset;mso-width-alt:4169;width:86pt'>
+ <col width=81 style='mso-width-source:userset;mso-width-alt:2962;width:61pt'>
  <col width=64 style='width:48pt'>
  <col width=72 style='mso-width-source:userset;mso-width-alt:2633;width:54pt'>
  <col width=64 span=5 style='width:48pt'>
@@ -63,7 +64,7 @@ else
   <td width=151 style='width:113pt'>ICCID</td>
   <td width=124 style='width:93pt'>IMSI</td>
   <td width=318 style='width:239pt'>Device ID</td>
-  <td width=81 style='width:61pt'>SIM Status</td>
+  <td width=114 style='width:86pt'>SIM Status</td>
   <td width=81 style='width:61pt'>Activated</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
@@ -790,7 +791,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:09 PM CET</td>
   <td>8935201641405933448</td>
   <td>270014140593344</td>
-  <td>VIVAGRI / Démo 2/DE256140-U</td>
+  <td>VIVAGRI / Dï¿½mo 2/DE256140-U</td>
   <td>Activated</td>
   <td>08/24/2020</td>
  </tr>
@@ -1455,7 +1456,7 @@ else
   <td>8935201641405932630</td>
   <td>270014140593263</td>
   <td>MANAGER / ECOSTAB / FENDT 1042 / SIM GPS<span
-  style='mso-spacerun:yes'>  </span></td>
+  style='mso-spacerun:yes'>ï¿½ï¿½</span></td>
   <td>Activated</td>
   <td>07/16/2020</td>
  </tr>
@@ -1519,7 +1520,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:09 PM CET</td>
   <td>8935201641405932481</td>
   <td>270014140593248</td>
-  <td>GAEC ADAM / PTZ N°2<span style='mso-spacerun:yes'> </span></td>
+  <td>GAEC ADAM / PTZ Nï¿½2<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>06/17/2020</td>
  </tr>
@@ -1559,7 +1560,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:09 PM CET</td>
   <td>8935201641405932473</td>
   <td>270014140593247</td>
-  <td>GAEC ADAM / PTZ N°1</td>
+  <td>GAEC ADAM / PTZ Nï¿½1</td>
   <td>Activated</td>
   <td>06/17/2020</td>
  </tr>
@@ -1584,7 +1585,7 @@ else
   <td>8935201641405932465</td>
   <td>270014140593246</td>
   <td>SCEA DE THIGNONVILLE / GHESTEM /PTZ<span
-  style='mso-spacerun:yes'> </span></td>
+  style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>06/17/2020</td>
  </tr>
@@ -1592,7 +1593,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:09 PM CET</td>
   <td>8935201641405932440</td>
   <td>270014140593244</td>
-  <td>M. AUBERGÉ Thibaut / PTZ</td>
+  <td>M. AUBERGï¿½ Thibaut / PTZ</td>
   <td>Activated</td>
   <td>06/17/2020</td>
  </tr>
@@ -1624,7 +1625,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:09 PM CET</td>
   <td>8935201641405932416</td>
   <td>270014140593241</td>
-  <td>SAV N°5 / SCEA LES SPAIS / POUVREAU</td>
+  <td>SAV Nï¿½5 / SCEA LES SPAIS / POUVREAU</td>
   <td>Activated</td>
   <td>06/08/2020</td>
  </tr>
@@ -1656,7 +1657,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:09 PM CET</td>
   <td>8935201641405932374</td>
   <td>270014140593237</td>
-  <td>Test Rémy Ipad</td>
+  <td>Test Rï¿½my Ipad</td>
   <td>Activated</td>
   <td>05/26/2020</td>
  </tr>
@@ -1784,7 +1785,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:08 PM CET</td>
   <td>8935201641405932218</td>
   <td>270014140593221</td>
-  <td>SAV / PTZ<span style='mso-spacerun:yes'> </span></td>
+  <td>SAV / PTZ<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>04/29/2020</td>
  </tr>
@@ -1816,7 +1817,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:08 PM CET</td>
   <td>8935201641405932168</td>
   <td>270014140593216</td>
-  <td>GAEC DUPUIS / PTZ N°2 / Anniv. 06/2021</td>
+  <td>GAEC DUPUIS / PTZ Nï¿½2 / Anniv. 06/2021</td>
   <td>Activated</td>
   <td>04/23/2020</td>
  </tr>
@@ -1824,7 +1825,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:08 PM CET</td>
   <td>8935201641405932150</td>
   <td>270014140593215</td>
-  <td>GAEC DUPUIS / PTZ N°1 / Anniv. 06/2021</td>
+  <td>GAEC DUPUIS / PTZ Nï¿½1 / Anniv. 06/2021</td>
   <td>Activated</td>
   <td>04/23/2020</td>
  </tr>
@@ -1856,7 +1857,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:08 PM CET</td>
   <td>8935201641405932119</td>
   <td>270014140593211</td>
-  <td>ETS SALLEE YVES / PTZ<span style='mso-spacerun:yes'> </span></td>
+  <td>ETS SALLEE YVES / PTZ<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>04/21/2020</td>
  </tr>
@@ -2040,7 +2041,7 @@ else
   <td height=20 style='height:15.0pt'>02/28/2020 03:08 PM CET</td>
   <td>8935201641405931889</td>
   <td>270014140593188</td>
-  <td>Irrigaronne 1 /ST3TOU29034 /<span style='mso-spacerun:yes'> </span></td>
+  <td>Irrigaronne 1 /ST3TOU29034 /<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>04/06/2020</td>
  </tr>
@@ -2456,7 +2457,7 @@ else
   <td height=20 style='height:15.0pt'>12/20/2019 09:02 AM CET</td>
   <td>8935201641405334373</td>
   <td>270014140533437</td>
-  <td>WIKAB / ARVALIS (Démo)</td>
+  <td>WIKAB / ARVALIS (Dï¿½mo)</td>
   <td>Activated</td>
   <td>03/17/2020</td>
  </tr>
@@ -2600,7 +2601,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788530</td>
   <td>270014140278853</td>
-  <td>BOUCHARD Diff/LINSTRUMELLE / cam 1<span style='mso-spacerun:yes'> </span></td>
+  <td>BOUCHARD Diff/LINSTRUMELLE / cam 1<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>10/03/2019</td>
  </tr>
@@ -2608,7 +2609,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788472</td>
   <td>270014140278847</td>
-  <td>DECOURTY Alexandre<span style='mso-spacerun:yes'> </span></td>
+  <td>DECOURTY Alexandre<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>10/02/2019</td>
  </tr>
@@ -2616,7 +2617,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788456</td>
   <td>270014140278845</td>
-  <td>SCEA GOHIER PTZ<span style='mso-spacerun:yes'> </span></td>
+  <td>SCEA GOHIER PTZ<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>07/30/2019</td>
  </tr>
@@ -2640,7 +2641,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788415</td>
   <td>270014140278841</td>
-  <td>BOUCHARD Dif Démo Magasin Irricam Fixe</td>
+  <td>BOUCHARD Dif Dï¿½mo Magasin Irricam Fixe</td>
   <td>Activated</td>
   <td>08/14/2019</td>
  </tr>
@@ -2664,7 +2665,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788522</td>
   <td>270014140278852</td>
-  <td>SCEA FERME DU CHÂTEAU / VERMERSCH / Irri. Fixe</td>
+  <td>SCEA FERME DU CHï¿½TEAU / VERMERSCH / Irri. Fixe</td>
   <td>Activated</td>
   <td>10/03/2019</td>
  </tr>
@@ -2672,7 +2673,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788399</td>
   <td>270014140278839</td>
-  <td>M CALDO Julien / Caméra 2</td>
+  <td>M CALDO Julien / Camï¿½ra 2</td>
   <td>Activated</td>
   <td>08/14/2019</td>
  </tr>
@@ -2720,7 +2721,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788423</td>
   <td>270014140278842</td>
-  <td>M CALDO Julien / Caméra 1</td>
+  <td>M CALDO Julien / Camï¿½ra 1</td>
   <td>Activated</td>
   <td>08/14/2019</td>
  </tr>
@@ -2753,7 +2754,7 @@ else
   <td>8935201641402788290</td>
   <td>270014140278829</td>
   <td>EARL DE MANDINELLI / DE BANIERES /PTZ<span
-  style='mso-spacerun:yes'> </span></td>
+  style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>02/04/2020</td>
  </tr>
@@ -2889,7 +2890,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788233</td>
   <td>270014140278823</td>
-  <td>SCEA EOUZAN/SIM Solaire<span style='mso-spacerun:yes'> </span></td>
+  <td>SCEA EOUZAN/SIM Solaire<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>01/23/2020</td>
  </tr>
@@ -2897,7 +2898,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788217</td>
   <td>270014140278821</td>
-  <td>Vantage AM/ EARL Vallee/ DELANOÊ</td>
+  <td>Vantage AM/ EARL Vallee/ DELANOï¿½</td>
   <td>Activated</td>
   <td>11/21/2019</td>
  </tr>
@@ -2913,7 +2914,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402803297</td>
   <td>270014140280329</td>
-  <td>EARL de Vignure SAV<span style='mso-spacerun:yes'> </span></td>
+  <td>EARL de Vignure SAV<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>03/31/2020</td>
  </tr>
@@ -2969,7 +2970,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402803123</td>
   <td>270014140280312</td>
-  <td>EARL BRIAUD / SIM GPS<span style='mso-spacerun:yes'> </span></td>
+  <td>EARL BRIAUD / SIM GPS<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>12/10/2019</td>
  </tr>
@@ -3001,7 +3002,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:10 AM CET</td>
   <td>8935201641402788308</td>
   <td>270014140278830</td>
-  <td>Vantage AM / GAEC MESANGE / m2m<span style='mso-spacerun:yes'> </span></td>
+  <td>Vantage AM / GAEC MESANGE / m2m<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>07/08/2019</td>
  </tr>
@@ -3090,7 +3091,7 @@ else
   <td>8935201641402803263</td>
   <td>270014140280326</td>
   <td></td>
-  <td>Activation R<span style='display:none'>eady</span></td>
+  <td>Activation Ready</td>
   <td></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
@@ -3249,7 +3250,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787342</td>
   <td>270014140278734</td>
-  <td>M SALLEE Yves / Caméra 1</td>
+  <td>M SALLEE Yves / Camï¿½ra 1</td>
   <td>Activated</td>
   <td>05/06/2019</td>
  </tr>
@@ -3281,7 +3282,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787300</td>
   <td>270014140278730</td>
-  <td>Meuse Compost / Noel / caméra 2</td>
+  <td>Meuse Compost / Noel / camï¿½ra 2</td>
   <td>Activated</td>
   <td>04/25/2019</td>
  </tr>
@@ -3321,7 +3322,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402788001</td>
   <td>270014140278800</td>
-  <td>M DARRAS<span style='mso-spacerun:yes'>  </span>/ Caméra 2</td>
+  <td>M DARRAS<span style='mso-spacerun:yes'>ï¿½ </span>/ Camï¿½ra 2</td>
   <td>Activated</td>
   <td>05/22/2019</td>
  </tr>
@@ -3385,7 +3386,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787888</td>
   <td>270014140278788</td>
-  <td>EARL de Vignuré Luc Genet</td>
+  <td>EARL de Vignurï¿½ Luc Genet</td>
   <td>Activated</td>
   <td>06/27/2019</td>
  </tr>
@@ -3409,7 +3410,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787862</td>
   <td>270014140278786</td>
-  <td>EARL Haenni<span style='mso-spacerun:yes'> </span></td>
+  <td>EARL Haenni<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>06/24/2019</td>
  </tr>
@@ -3417,7 +3418,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787821</td>
   <td>270014140278782</td>
-  <td>EARL Jaquemet Lecoq<span style='mso-spacerun:yes'> </span></td>
+  <td>EARL Jaquemet Lecoq<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>05/21/2019</td>
  </tr>
@@ -3425,7 +3426,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787938</td>
   <td>270014140278793</td>
-  <td>M DARRAS / Caméra 3<span style='mso-spacerun:yes'> </span></td>
+  <td>M DARRAS / Camï¿½ra 3<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>05/29/2019</td>
  </tr>
@@ -3433,7 +3434,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787854</td>
   <td>270014140278785</td>
-  <td>M DARRAS / Caméra 1</td>
+  <td>M DARRAS / Camï¿½ra 1</td>
   <td>Activated</td>
   <td>06/24/2019</td>
  </tr>
@@ -3449,7 +3450,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787847</td>
   <td>270014140278784</td>
-  <td>SCEA CHAMBRIE/SARRADIN /Caméra 1</td>
+  <td>SCEA CHAMBRIE/SARRADIN /Camï¿½ra 1</td>
   <td>Activated</td>
   <td>06/24/2019</td>
  </tr>
@@ -3481,7 +3482,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787896</td>
   <td>270014140278789</td>
-  <td>SCEA CHAMBRIE / SARRADIN / Caméra 2</td>
+  <td>SCEA CHAMBRIE / SARRADIN / Camï¿½ra 2</td>
   <td>Activated</td>
   <td>07/02/2019</td>
  </tr>
@@ -3497,8 +3498,8 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787870</td>
   <td>270014140278787</td>
-  <td>NAÏO TECHNOLOGIES<span style='mso-spacerun:yes'>  </span>TEST<span
-  style='mso-spacerun:yes'> </span></td>
+  <td>NAï¿½O TECHNOLOGIES<span style='mso-spacerun:yes'>ï¿½ </span>TEST<span
+  style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>06/25/2019</td>
  </tr>
@@ -3522,7 +3523,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787524</td>
   <td>270014140278752</td>
-  <td>SCEA Langé 1</td>
+  <td>SCEA Langï¿½ 1</td>
   <td>Activated</td>
   <td>04/23/2019</td>
  </tr>
@@ -3546,7 +3547,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787466</td>
   <td>270014140278746</td>
-  <td>EARL VAG jerome Quillou<span style='mso-spacerun:yes'> </span></td>
+  <td>EARL VAG jerome Quillou<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>05/09/2019</td>
  </tr>
@@ -3594,7 +3595,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787516</td>
   <td>270014140278751</td>
-  <td>SCEA Langé 2</td>
+  <td>SCEA Langï¿½ 2</td>
   <td>Activated</td>
   <td>04/23/2019</td>
  </tr>
@@ -3602,7 +3603,7 @@ else
   <td height=20 style='height:15.0pt'>03/13/2019 11:09 AM CET</td>
   <td>8935201641402787490</td>
   <td>270014140278749</td>
-  <td>M SALLEE Yves / Caméra 2</td>
+  <td>M SALLEE Yves / Camï¿½ra 2</td>
   <td>Activated</td>
   <td>05/09/2019</td>
  </tr>
@@ -3730,7 +3731,7 @@ else
   <td height=20 style='height:15.0pt'>07/04/2017 10:29 AM CEST</td>
   <td>8935201641401722019</td>
   <td>270014140172201</td>
-  <td><span style='mso-spacerun:yes'> </span>Vantage AM Sima 5</td>
+  <td><span style='mso-spacerun:yes'>ï¿½</span>Vantage AM Sima 5</td>
   <td>Activated</td>
   <td>02/22/2019</td>
  </tr>
@@ -3787,7 +3788,7 @@ else
   <td>8935201641401721896</td>
   <td>270014140172189</td>
   <td>CRCA 3</td>
-  <td>Activation R<span style='display:none'>eady</span></td>
+  <td>Activation Ready</td>
   <td></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
@@ -3842,7 +3843,7 @@ else
   <td height=20 style='height:15.0pt'>07/04/2017 10:29 AM CEST</td>
   <td>8935201641401721920</td>
   <td>270014140172192</td>
-  <td>RASE / Caméra 2</td>
+  <td>RASE / Camï¿½ra 2</td>
   <td>Activated</td>
   <td>03/14/2019</td>
  </tr>
@@ -3914,7 +3915,7 @@ else
   <td height=20 style='height:15.0pt'>07/04/2017 10:28 AM CEST</td>
   <td>8935201641401719874</td>
   <td>270014140171987</td>
-  <td>RASE / Caméra 1</td>
+  <td>RASE / Camï¿½ra 1</td>
   <td>Activated</td>
   <td>06/21/2018</td>
  </tr>
@@ -3938,7 +3939,7 @@ else
   <td height=20 style='height:15.0pt'>07/04/2017 10:28 AM CEST</td>
   <td>8935201641401719965</td>
   <td>270014140171996</td>
-  <td>SCEA 3 Vallées Pich</td>
+  <td>SCEA 3 Vallï¿½es Pich</td>
   <td>Activated</td>
   <td>05/27/2018</td>
  </tr>
@@ -3954,7 +3955,7 @@ else
   <td height=20 style='height:15.0pt'>07/04/2017 10:28 AM CEST</td>
   <td>8935201641401719908</td>
   <td>270014140171990</td>
-  <td>Prepa 5 / Démo Nermont</td>
+  <td>Prepa 5 / Dï¿½mo Nermont</td>
   <td>Activated</td>
   <td>04/23/2018</td>
  </tr>
@@ -4066,7 +4067,7 @@ else
   <td height=20 style='height:15.0pt'>07/07/2016 09:06 AM CEST</td>
   <td>8935201641400441769</td>
   <td>270014140044176</td>
-  <td>EARL AGRI GB/De Campagnole<span style='mso-spacerun:yes'> </span></td>
+  <td>EARL AGRI GB/De Campagnole<span style='mso-spacerun:yes'>ï¿½</span></td>
   <td>Activated</td>
   <td>04/09/2018</td>
  </tr>
@@ -4090,7 +4091,7 @@ else
   <td height=20 style='height:15.0pt'>07/07/2016 09:06 AM CEST</td>
   <td>8935201641400441736</td>
   <td>270014140044173</td>
-  <td>SCEA Geneste/Touchat 2/Bollène Irrifrance</td>
+  <td>SCEA Geneste/Touchat 2/Bollï¿½ne Irrifrance</td>
   <td>Activated</td>
   <td>03/28/2018</td>
  </tr>
@@ -4098,7 +4099,7 @@ else
   <td height=20 style='height:15.0pt'>07/07/2016 09:06 AM CEST</td>
   <td>8935201641400441728</td>
   <td>270014140044172</td>
-  <td>BARBé Christophe</td>
+  <td>BARBï¿½ Christophe</td>
   <td>Activated</td>
   <td>03/19/2018</td>
  </tr>
@@ -4106,7 +4107,7 @@ else
   <td height=20 style='height:15.0pt'>07/07/2016 09:06 AM CEST</td>
   <td>8935201641400441710</td>
   <td>270014140044171</td>
-  <td>Neufville Démo Charles</td>
+  <td>Neufville Dï¿½mo Charles</td>
   <td>Activated</td>
   <td>03/28/2018</td>
  </tr>
@@ -4124,7 +4125,7 @@ else
   <td width=151 style='width:113pt'></td>
   <td width=124 style='width:93pt'></td>
   <td width=318 style='width:239pt'></td>
-  <td width=81 style='width:61pt'></td>
+  <td width=114 style='width:86pt'></td>
   <td width=81 style='width:61pt'></td>
  </tr>
  <![endif]>
@@ -4133,3 +4134,8 @@ else
 </body>
 
 </html>
+
+<body style="background-color:#2ecc71">
+<br/>
+<br/>
+<center><input style="text style=width:200px;height:30px;font-size:20px;color:#2ecc71"type=button onclick=window.location.href='file:///C:/Windows/System32/Abonnement_et_Facturation/index.html'; value=Retour />
